clusters/live/devbench/appwrite/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: appwrite-public-headers
spec:
  headers:
    allowedHosts:
      - dev.nirmalhk7.com
    browserXssFilter: true
    contentTypeNosniff: true
    customResponseHeaders:
      X-Server: "OCB-Milano"
    frameDeny: true
    referrerPolicy: no-referrer
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: appwrite-public-ratelimit
spec:
  rateLimit:
    average: 25
    burst: 75
    sourceCriterion:
      requestHeaderName: CF-Connecting-IP
